--- a/STM32 files/MDP_V5/MDP_V5.ioc
+++ b/STM32 files/MDP_V5/MDP_V5.ioc
@@ -37,22 +37,23 @@ Mcu.Pin0=PE5
 Mcu.Pin1=PE6
 Mcu.Pin10=PE10
 Mcu.Pin11=PE14
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PA15
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PB3
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
+Mcu.Pin12=PD8
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PA15
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=PB3
+Mcu.Pin19=PB8
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM1_VS_no_output4
-Mcu.Pin24=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM8_VS_no_output1
-Mcu.Pin26=VP_TIM8_VS_no_output2
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM1_VS_no_output4
+Mcu.Pin25=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM8_VS_no_output1
+Mcu.Pin27=VP_TIM8_VS_no_output2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -60,7 +61,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PE7
 Mcu.Pin9=PE8
-Mcu.PinsNb=27
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -126,6 +127,10 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=PWMB
 PC7.Locked=true
 PC7.Signal=S_TIM8_CH2
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=SW
+PD8.Locked=true
+PD8.Signal=GPIO_Input
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LED3
 PE10.Locked=true
